--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-
-    <!doctype html>
-    <html>
+<!doctype html>
+<html>
     <head>
-    <title>Our Funky HTML Page</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+        <title>Accueil</title>
+        <meta charset="utf-8"/>
     </head>
+    <header>
+        Histoire / Téléchargement
+        -
+        Equipes
+        -
+        Présentation
+    </header>
     <body>
-    Content goes here.
+        Présentation?
     </body>
-    </html>
+</html>
