--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8"/>
     </head>
     <header>
-        Histoire / Téléchargement
-        -
-        Equipes
-        -
-        Présentation
-    </header>
+        <a href="../index">Accueil</a>
+        <a href="../pages/equipe.html">Equipe du jeu</a>
+        <a href="../pages/histoire.html">Histoire</a>
+        <link rel="style" href="../ressources/style/style.css"
+         type="text/css"/>
+        </header>
     <body>
-        Présentation?
+        <div type="D_Button"><a href="http://nsi-lycee.fr">Télécharger</a></div>
     </body>
 </html>
