changement url + css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          type="text/css"/>
         </header>
     <body>
-        <div type="D_Button"><a href="http://nsi-lycee.fr">Télécharger</a></div>
+      <p>Jeu</p>
+        <div type="D_Button"><a href="http://tinyurl.com/mtp9pcyw">Télécharger</a></div>
     </body>
 </html>
