--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          type="text/css"/>
     </head>
     <body>
-      <p>Jeu</p>
+      <p>Paul Story</p>
         <div type="D_Button"><a href="http://tinyurl.com/mtp9pcyw">Télécharger</a></div>
     </body>
 </html>
