--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <a href="../index">Accueil</a>
         <a href="../pages/equipe.html">Equipe du jeu</a>
         <a href="../pages/histoire.html">Histoire</a>
-        <link rel="style" href="../ressources/style/style.css"
+        <link rel="style" href="ressources/style/style.css"
          type="text/css"/>
     </head>
     <body>
