--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <title>Accueil</title>
         <meta charset="utf-8"/>
-        <link rel="style" href="ressources/style/style.css"
+        <link rel="style" href="https://nsi-corneille.github.io/ressources/style/style.css"
          type="text/css"/>
     </head>
     <header>
         <a href="../index">Accueil</a>
         <a href="../pages/equipe.html">Equipe du jeu</a>
-        <a href="../pages/histoire.html">Histoire</a></header>
+        <a href="../pages/histoire.html">Histoire</a>
+    </header>
     <body>
       <p>Paul Story</p>
         <div type="D_Button"><a href="http://tinyurl.com/mtp9pcyw">Télécharger</a></div>
