--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>Accueil</title>
         <meta charset="utf-8"/>
-        <link rel="style" href="https://nsi-corneille.github.io/ressources/style/style.css"
-         type="text/css"/>
+        <link rel="stylesheet" 
+        href="https://github.com/nsi-corneille/nsi-corneille.github.io/blob/main/ressources/style/style.css"
+        type="text/css"/>
     </head>
     <header>
         <a href="../index">Accueil</a>
