--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="../pages/histoire.html">Histoire</a>
     </header>
     <body>
-      <p>Paul Story</p>
+      <p>Paul's Story</p>
         <div type="D_Button"><a href="http://tinyurl.com/mtp9pcyw">Télécharger</a></div>
     </body>
 </html>
