tout ce qu'on a dit au dernier cours

--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
         <title>Accueil</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" 
-        href="https://nsi-corneille.github.io/ressources/style/style.css"
+        href="ressources/style/style.css"
         type="text/css"/>
     </head>
-    <header>
-        <a href="../index">Accueil</a>
-        <a href="../pages/equipe.html">Equipe du jeu</a>
-        <a href="../pages/histoire.html">Histoire</a>
-    </header>
     <body>
-      <p>Paul's Story</p>
-        <div type="D_Button"><a href="http://tinyurl.com/mtp9pcyw">Télécharger</a></div>
+        <nav>
+            <a href="#" class="nav-icon" aria-label="visit Homepage">
+                <span>Paul's Story</span>
+            </a>
+                <div class="navlinks">
+                    <a href="../pages/histoire.html">Histoire</a>&nbsp;&nbsp;
+                    <a href="../pages/equipe.html">Equipe du jeu</a>&nbsp;&nbsp;
+                    <a href="../pages/credits.html">Crédits</a>
+                </div>
+        </nav>
+        <div class="content">
+            <p>Paul's Story</p>
+            <br>
+            <p>A dreamlike reality</p>
+            <div class="D_Button">
+                <a href="http://tinyurl.com/mtp9pcyw">Télécharger</a>
+            </div>
+        </div>
     </body>
 </html>
