--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Accueil</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" 
-        href="ressources/style/style.css"
+        href="https://nsi-corneille.github.io/ressources/style/style.css"
         type="text/css"/>
     </head>
     <body>
