--- a/pages/histoire.html
+++ b/pages/histoire.html
@@ -4,4 +4,22 @@
     <title> Histoire </title>
     <meta charset="utf-8"/>
 </head>
+<body>
+    C’est l’histoire d’un homme riche qui s’appelle Paul. Il est prétentieux avec son argent et refuse à chaque
+fois de donner de l’argent aux personnes dans le besoin. Un jour, il rentre de son travail et sur la route, il
+tombe nez à nez devant chez lui avec un couple mendiant qui s’appelle Nélia et Titouan. Ce couple lui
+demande de l’argent et celui-ci leur dit : « Je n’ai rien à vous donner. »
+Nélia qui répond avec tristesse : « Mais monsieur, nous avons peu d’argent pour se nourrir et en plus je
+suis enceinte et je dois me nourrir pour pouvoir garder mon enfant. » Paul lui répond avec froideur : «
+Vous n’aurez rien de ma part. Mon argent je l’ai gagné grâce au travail que j’ai fournis et vous vous venez
+réclamer de l’argent. Allez donc travailler et arrêter de mendier comme ça dans la rue. » Titouan, son
+mari, répond avec méchanceté : « Je vous interdis de parler comme ça à ma femme. Votre radinerie vous
+ruinera un jour. »
+Après cette petite altercation, il rentre chez lui. Le soir même, il s’endort et le matin il se réveille dans un
+endroit inconnu et c’est la que son histoire commence.
+Il rencontre un homme sous le nom de toko qui l’interpelle : « Bonjour Paul, savez-vous pourquoi vous
+êtes ici ? » Paul répond:«Qui êtes vous et qu’est-ce que je fais ici ? » toko répond:«Je suis votre guide et
+vous êtes ici pour que vous voyez la pauvreté du monde car je vois que vous en avez rien à faire de cela.
+Vous allez donc passer quelques épreuves pour rentrer chez vous.
+</body>
 </html>
