--- a/pages/histoire.html
+++ b/pages/histoire.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html>
     <head>
-        <title>Accueil</title>
+        <title>Equipe du jeu</title>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" 
-        href="https://nsi-corneille.github.io/ressources/style/style.css"
+        <link rel="https://nsi-corneille.github.io/ressources/style/equipe.css"
         type="text/css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
     </head>
     <body>
+        <nav>
+            <a href="#" class="nav-icon" aria-label="visit Homepage">
+                <span>Paul's Story</span>
+            </a>
+                <div class="navlinks">
+                    <a href="../pages/histoire.html">Histoire</a>&nbsp;&nbsp;
+                    <a href="../pages/equipe.html">Equipe du jeu</a>&nbsp;&nbsp;
+                    <a href="../pages/credits.html">Crédits</a>
+                </div>
+        </nav>
         C’est l’histoire d’un homme riche qui s’appelle Paul. Il est prétentieux avec son argent et refuse à chaque
         fois de donner de l’argent aux personnes dans le besoin. Un jour, il rentre de son travail et sur la route, il
         tombe nez à nez devant chez lui avec un couple mendiant qui s’appelle Nélia et Titouan. Ce couple lui
