--- a/pages/histoire.html
+++ b/pages/histoire.html
@@ -9,9 +9,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
-    </head>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+        </style>
     <body>
         <nav>
             <a href="#" class="nav-icon" aria-label="visit Homepage">
