--- a/pages/histoire.html
+++ b/pages/histoire.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
     <head>
-        <title>Equipe du jeu</title>
+        <title>Histoire</title>
         <meta charset="utf-8"/>
         <link rel="https://nsi-corneille.github.io/ressources/style/equipe.css"
         type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
-        </style>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+    </head>    
     <body>
         <nav>
             <a href="#" class="nav-icon" aria-label="visit Homepage">
