--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
                 <span>Paul's Story</span>
             </a>
                 <div class="navlinks">
-                    <a href="../pages/histoire.html">Histoire</a>&nbsp;&nbsp;
-                    <a href="../pages/equipe.html">Equipe du jeu</a>&nbsp;&nbsp;
-                    <a href="../pages/credits.html">Crédits</a>
+                    <a href="#histoire">Histoire</a>&nbsp;&nbsp;
+                    <a href="#equipe">Equipe du jeu</a>&nbsp;&nbsp;
+                    <a href="#credits">Crédits</a>
                 </div>
         </nav>
         <div class="content">
-            <p>Paul's Story</p>
-            <br>
-            <p>A dreamlike reality</p>
+            <div class="title">
+                Paul's Story
+                <br>
+                A dreamlike reality
+            </div>
             <div class="D_Button">
                 <a href="https://drive.google.com/uc?export=download&id=18mrvNdFA4cKEgoxcowz5K3F6Ezj18Kzs">Télécharger</a>
             </div>
