--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>Accueil</title>
         <meta charset="utf-8"/>
-        <link rel="icon" href="Paul's Story logo.png">
         <link rel="stylesheet" 
         href="https://nsi-corneille.github.io/ressources/style/style.css"
         type="text/css"/>
@@ -26,11 +25,9 @@
                 </div>
         </nav>
         <div class="content">
-            <div class="title">
-                Paul's Story
-                <br>
-                A dreamlike reality
-            </div>
+            <p class="title">Paul's Story
+            <br>
+            A dreamlike reality</p>
             <div class="D_Button">
                 <a href="https://drive.google.com/uc?export=download&id=18mrvNdFA4cKEgoxcowz5K3F6Ezj18Kzs">Télécharger</a>
             </div>
