--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Accueil</title>
         <meta charset="utf-8"/
-        <link rel="icon" href="/ressources/image/Paul's Story logo.png">
+        <link rel="icon" href="/ressources/image/Paul's Story logo.png"/>
         <link rel="stylesheet" 
         href="https://nsi-corneille.github.io/ressources/style/style.css"
         type="text/css"/>
