--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="content">
             <div class="button_container">
-                <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu.png" alt="img accueil" class="accueil_img">
+                <img src="/ressources/images/fond_page_acceuil_jeu.png" alt="img accueil" class="accueil_img">
                 <button class="D_Button">
                     <a href="https://drive.google.com/uc?export=download&id=18mrvNdFA4cKEgoxcowz5K3F6Ezj18Kzs">Télécharger</a>
                 </button>
