--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-<<<<<<< HEAD
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
         <script src="https://nsi-corneille.github.io/ressources/JS/slideshow.js"> </script>
 =======
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
->>>>>>> 0bf5466d78b6d99c077104a0434c0812b5e5ad93
     </head>
     <body>
         <nav>
@@ -32,12 +30,7 @@
         </nav>
         <div class="content">
             <div class="button_container">
-<<<<<<< HEAD
-                    <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">
-=======
-                <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu.png" alt="img accueil" class="accueil_img">
->>>>>>> 0bf5466d78b6d99c077104a0434c0812b5e5ad93
-                <button class="D_Button">
+                    <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
                     <a href="https://drive.google.com/file/d/1FJm1hZkxMFunxUrgZcXvMFa1KTuiwiqo/view">Télécharger v1</a>
                 </button>
             </div>
