--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                  </div>
               </div>
             </div>
-            <a id="equipe">
-            </a>
+            <a id="equipe"></a>
+            <div class="equipe">
+            </div>
             <a id="credits">
             </a>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
