--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
             </div>
             <a id="equipe"></a>
             <div class="equipe">
+            <p>
+                Level Designer:    
+                Armand
+                Yanis
+                Alexandre
+                Nathan
+
+            </p>
+            
             </div>
             <a id="credits">
             </a>
