--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             <a id="equipe"></a>
             <div class="equipe">
             <p>
-                Level Designer:    
-                Armand
-                Yanis
-                Alexandre
-                Nathan
+                Level Designer: <br>   
+                Armand<br>
+                Yanis<br>
+                Alexandre<br>
+                Nathan<br>
 
             </p>
             
