--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
             <a id="equipe"></a>
             <div class="equipe">
             <p>
-                Level Designer:<br>   
-                Armand<br>
-                Yanis<br>
-                Alexandre<br>
-                Nathan<br>
-
+                <br>Level Designer:   
+                <br>Armand
+                <br>Yanis
+                <br>Alexandre
+                <br>Nathan
             </p>
             
             </div>
