--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
             </div>
             <a id="equipe"></a>
             <div class="equipe">
-            <p>
-                <br>Level Designer:   
+            <p1>
+                <br>Level Designer:   WEB Designer:     
+            </p1>
+            <p2>   
                 <br>Armand
                 <br>Yanis
                 <br>Alexandre
                 <br>Nathan
-            </p>
+            </p2>
             
             </div>
             <a id="credits">
