--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-        <script src="https://nsi-corneille.github.io/ressources/JS/slideshow.js"> </script>
-=======
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -37,7 +35,6 @@
             <a id="histoire"></a>
             <br>
             <br>
-            <br>
             <div class="histoire">
                 <h1>Histoire</h1>
                 C’est l’histoire d’un homme riche qui s’appelle Paul. Il est prétentieux avec son argent et refuse à chaque
@@ -56,45 +53,17 @@
                 êtes ici ? » Paul répond:«Qui êtes vous et qu’est-ce que je fais ici ? » Toko répond:«Je suis votre guide et
                 vous êtes ici pour que vous voyez la pauvreté du monde car je vois que vous en avez rien à faire de cela.
                 Vous allez donc passer quelques épreuves pour rentrer chez vous...
-                <div id="wrapper">
-                    <div id="slider-wrap">
-                       <ul id="slider">
-                          <li>
-                           <div>
-           <img src="http://www.cuisineetsentiments.com/images/pomme_1.jpg" class="img"/>
-                           </div>                
-                        </li>
-                        <li>
-                           <div>
-           <img src="http://www.cuisineetsentiments.com/images/pomme_1.jpg" class="img"/>
-                           </div>
-                        </li>
-                        <li>
-                           <div>
-           <img src="http://www.cuisineetsentiments.com/images/pomme_1.jpg" class="img"/>
-                           </div>
-                        </li>
-                        <li>
-                           <div>
-           <img src="http://www.cuisineetsentiments.com/images/pomme_1.jpg" class="img"/>
-                           </div>
-                        </li>
-                        <li>
-                           <div>
-                             <img src="http://www.cuisineetsentiments.com/images/pomme_1.jpg" class="img"/>
-                           </div>
-                        </li>
-                     </ul>
-                      <!--controls-->
-                     <div class="btns" id="next"><i class="fa fa-arrow-right"></i></div>
-                     <div class="btns" id="previous"><i class="fa fa-arrow-left"></i></div>
-                     <div id="counter"></div>
-                     <div id="pagination-wrap">
-                       <ul>
-                       </ul>
-                     </div>
-                     <!--controls-->  
-                 </div>
+                <div class="card">
+                    <div class="card_part card_part-one">
+                    </div>
+                    <div class="card_part card_part-two">
+                    </div>
+                    <div class="card_part card_part-three">
+                    </div>
+                    <div class="card_part card_part-four">
+                    </div>
+                  </div>
+                            </div>
               </div>
             </div>
             <a id="equipe"></a>
