--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
               </div>
             </div>
             <a id="equipe"></a>
+            <br>
             <div class="equipe">
-            <p>
-                <br>Level Designer:     WEB Designer:       
-                <br>Armand
-                <br>Yanis
-                <br>Alexandre
-                <br>Nathan 
-            </p>        
+            <h1>Equipe du jeu</h1>
+            <li>
+                <ul>
+                    Web Designer:
+                    Achille Nazim
+                </ul>
+            </li>    
             </div>
             <a id="credits">
             </a>
