--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
             <h1>Equipe du jeu</h1>
             <li>
                 <ul>
-                    Web Designer:
-                    Achille Nazim
+                    Web Designer:        
+                    Achille HADJALI
+                    Maceo LAMRI
+                    Nazim MALKI
+                    
                 </ul>
             </li>    
             </div>
