--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@
                 </ul>
             </li>    
             </div>
-            <a id="credits">
-            </a>
+            <a id="credits"></a>
+            <br>
+            <div class="credits">
+                <h2>Liens utilisés</h2>
+                Pygame: https://www.pygame.org/
+                Python: https://www.python.org/
+                
+                
+            </div>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
     </body>
