--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 êtes ici ? » Paul répond:«Qui êtes vous et qu’est-ce que je fais ici ? » Toko répond:«Je suis votre guide et
                 vous êtes ici pour que vous voyez la pauvreté du monde car je vois que vous en avez rien à faire de cela.
                 Vous allez donc passer quelques épreuves pour rentrer chez vous...
+                <br>
+                <br>
                 <div class="card">
                     <div class="card_part card_part-one">
                     </div>
@@ -67,18 +69,22 @@
               </div>
             </div>
             <a id="equipe"></a>
-            <br>
             <div class="equipe">
             <h1>Equipe du jeu</h1>
-            <li>
-                <ul>
-                    Web Designer:        
-                    Achille HADJALI
-                    Maceo LAMRI
-                    Nazim MALKI
-                    
-                </ul>
-            </li>    
+              <h2>Web Design:</h2>
+                    HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override
+              <h2>Histoire</h2>
+                    CAMARA Daouda  BELBEIDA Nahil
+              <h2>Son</h2>
+                    BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia
+              <h2>Direction Artistique</h2>
+              INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon
+              <h2>Level Design</h2>
+              ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre
+              <br>
+              <br>
+              <br>
+              Sous la direction générale de Steeve PYTEL
             </div>
             <a id="credits"></a>
             <br>
