--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <br>
             <div class="credits">
                 <h2>Liens utilisés</h2>
-                Pygame: https://www.pygame.org/
-                Python: https://www.python.org/ 
+                <br>Pygame: https://www.pygame.org/
+                <br>Python: https://www.python.org/ 
                 
             </div>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
