--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2>Liens utilisés</h2>
                 <br>Pygame: https://www.pygame.org/
                 <br>Python: https://www.python.org/ 
-                
+                <br><h1>Amusez-vous !</h1>
             </div>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
