--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             <a id="equipe"></a>
             <div class="equipe">
             <h1>Equipe du jeu</h1>
-              <h2>Web Design:</h2>
+              <h2>Web Design:</h2><br>
                     HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override
-              <h2>Histoire</h2>
+              <h2>Histoire</h2><br>
                     CAMARA Daouda  BELBEIDA Nahil
-              <h2>Son</h2>
+              <h2>Son</h2><br>
                     BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia
-              <h2>Direction Artistique</h2>
+              <h2>Direction Artistique</h2><br>
               INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon
-              <h2>Level Design</h2>
+              <h2>Level Design</h2><br>
               ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre
               <br>
               <br>
