--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             <a id="equipe"></a>
             <div class="equipe">
             <h1>Equipe du jeu</h1>
-              <h2>Web Design:</h2><br>
+              <h2>Web Design:</h2>
                     HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override
-              <h2>Histoire</h2><br>
+                    <br><h2>Histoire</h2>
                     CAMARA Daouda  BELBEIDA Nahil
-              <h2>Son</h2><br>
+                    <br><h2>Son</h2>
                     BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia
-              <h2>Direction Artistique</h2><br>
+                    <br><h2>Direction Artistique</h2>
               INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon
-              <h2>Level Design</h2><br>
+              <br><h2>Level Design</h2>
               ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre
               <br>
               <br>
@@ -90,9 +90,10 @@
             <br>
             <div class="credits">
                 <h2>Liens utilisés</h2>
-                <br>Pygame: https://www.pygame.org/
-                <br>Python: https://www.python.org/ 
-                <br><h1>Amusez-vous !</h1>
+                Pygame: https://www.pygame.org/
+                Python: https://www.python.org/
+                
+                
             </div>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
