--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             <h1>Equipe du jeu</h1>
               <h2>Web Design:</h2>
                     HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override
-                    <br><h2>Histoire</h2>
+                    <br><br><h2>Histoire</h2>
                     CAMARA Daouda  BELBEIDA Nahil
-                    <br><h2>Son</h2>
+                    <br><br><h2>Son</h2>
                     BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia
-                    <br><h2>Direction Artistique</h2>
+                    <br><br><h2>Direction Artistique</h2>
               INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon
-              <br><h2>Level Design</h2>
+              <br><br><h2>Level Design</h2>
               ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre
               <br>
               <br>
@@ -90,6 +90,9 @@
             <br>
             <div class="credits">
                 <h2>Liens utilisés</h2>
+                <li><br>Pygame: https://www.pygame.org/</li>
+                <li><br>Python: https://www.python.org/ </li>
+                <br>
                 <li>Pygame: https://www.pygame.org/</li>
                 <li>Python: https://www.python.org/ </li>
                 <br><h1>Amusez-vous !</h1>
