--- a/index.html
+++ b/index.html
@@ -69,26 +69,28 @@
               </div>
             </div>
             <a id="equipe"></a>
+  <br>
+  <br>
             <div class="equipe">
             <h1>Equipe du jeu</h1>
               <h2>Web Design:</h2>
-                    HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override
-                    <br><br><h2>Histoire</h2>
-                    CAMARA Daouda  BELBEIDA Nahil
-                    <br><br><h2>Son</h2>
-                    BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia
-                    <br><br><h2>Direction Artistique</h2>
-              INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon
-              <br><br><h2>Level Design</h2>
-              ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre
-              <br>
-              <br>
+                    HADJ-ALI Achille  Orh  Koveron  LAMRI Maceo  Override<br> -------------------------------
+                    <h2>Histoire</h2>
+                    CAMARA Daouda  BELBEIDA Nahil<br> -------------------------------
+                    <h2>Son</h2>
+                    BIHR Denis  COHEN Antoine  DIEUDEGARD Romain  DEHAIS Titouan  BELMKEDDEM Nelia<br> -------------------------------
+                    <h2>Direction Artistique</h2>
+              INES-GUERRA Elsa  HEILMER Simon  LANDAIS Nolan  LEMMEE Emmanuel  BLONDEL Salomon<br> -------------------------------
+              <h2>Level Design</h2>
+              ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre<br> -------------------------------
               <br>
               Sous la direction générale de Steeve PYTEL
             </div>
             <a id="credits"></a>
             <br>
+  <br>
             <div class="credits">
+              <h1>Crédits</h1>
                 <h2>Liens utilisés</h2>
                 <li><br>Pygame: https://www.pygame.org/</li>
                 <li><br>Python: https://www.python.org/ </li>
