--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>The Paul's story</title>
         <meta charset="utf-8"/>
-        <link rel="icon" href="https://nsi-corneille.github.io/ressources/images/Paul's Story logo.png"/>
+        <link rel="icon" href="ressources/images/Paul's Story logo.png"/>
         <link rel="stylesheet" 
-        href="https://nsi-corneille.github.io/ressources/style/style.css"
+        href="ressources/style/style.css"
         type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,11 +28,12 @@
         </nav>
         <div class="content">
             <div class="button_container">
-                    <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
+                    <img src="ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
                     <a href="https://drive.google.com/file/d/1FJm1hZkxMFunxUrgZcXvMFa1KTuiwiqo/view">Télécharger v1</a>
                 </button>
             </div>
             <a id="histoire"></a>
+            <br>
             <br>
             <br>
             <div class="histoire">
@@ -69,8 +70,7 @@
               </div>
             </div>
             <a id="equipe"></a>
-  <br>
-  <br>
+            <br><br><br>
             <div class="equipe">
             <h1>Equipe du jeu</h1>
               <h2>Web Design:</h2>
@@ -88,7 +88,8 @@
             </div>
             <a id="credits"></a>
             <br>
-  <br>
+            <br>
+            <br>
             <div class="credits">
               <h1>Crédits</h1>
                 <h2>Liens utilisés</h2>
@@ -99,7 +100,7 @@
                 <li>Python: https://www.python.org/ </li>
                 <br><h1>Amusez-vous !</h1>
             </div>
-            <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
+            <img src="ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
     </body>
 </html>
