--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>The Paul's story</title>
         <meta charset="utf-8"/>
-        <link rel="icon" href="ressources/images/Paul's Story logo.png"/>
+        <link rel="icon" href="https://nsi-corneille.github.io/ressources/images/Paul's Story logo.png"/>
         <link rel="stylesheet" 
-        href="ressources/style/style.css"
+        href="https://nsi-corneille.github.io/ressources/style/style.css"
         type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
         </nav>
         <div class="content">
             <div class="button_container">
-                    <img src="ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
+                    <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
                     <a href="https://drive.google.com/file/d/1FJm1hZkxMFunxUrgZcXvMFa1KTuiwiqo/view">Télécharger v1</a>
                 </button>
             </div>
@@ -84,6 +84,9 @@
               <h2>Level Design</h2>
               ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre<br> -------------------------------
               <br>
+              <div class="grille">
+
+              </div>
               Sous la direction générale de Steeve PYTEL
             </div>
             <a id="credits"></a>
@@ -100,7 +103,7 @@
                 <li>Python: https://www.python.org/ </li>
                 <br><h1>Amusez-vous !</h1>
             </div>
-            <img src="ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
+            <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
     </body>
 </html>
